# chat-bot

./: .gitignore  Dockerfile  README  README.md  app.yaml  chat-bot.py  pyproject.toml
.github/workflows/: cd.yaml  linter.yaml
src/: functions.py
