[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Nathan Bick <nathankbick1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.19.0"
openai = "^0.27.0"
goblet-gcp = "^0.10.2"
streamlit-chat = "^0.0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
